sass compiler and access log added. images added. Pug sytax working

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,15 @@
 doctype html
 html(lang="en")
-  head
-    meta(charset="UTF-8")
-    title Şikayet Var
-  body
-    | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, repellat laboriosam architecto aut obcaecati nam, vel doloribus illum neque incidunt minus, distinctio accusantium tenetur. Accusamus laboriosam nulla et facilis dicta?
+    head
+        meta(charset="UTF-8")
+        title Şikayet Var
+        script(src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js", defer)
+        script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js", defer)
+        link(rel="stylesheet" href="css/styles.css")
+    body
+        h1 Hello World
+        div
+            div.mobile-bar
+                img(src="images/mobile-bar.png")
+
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, repellat laboriosam architecto aut obcaecati nam, vel doloribus illum neque incidunt minus, distinctio accusantium tenetur. Accusamus laboriosam nulla et facilis dicta?
