--- a/views/index.pug
+++ b/views/index.pug
@@ -17,9 +17,12 @@ html(lang="en")
             .actions
                 ul
                     li
-                        img(src="images/hamburger.png", width="17")
+                        a(href="#")
+                            img(src="images/hamburger.png", width="17")
                     li
-                        img(src="images/bell.png", width="18")
+                        a(href="#")
+                            img(src="images/bell.png", width="18")
+                            span.greenlight
     
             .profile
                 img(src="images/avatar.png" width="70")
@@ -51,35 +54,38 @@ html(lang="en")
                         div
                             img(src="images/ic_4.svg")
                         article
-                            .brand Trendyol
-                            .title Lorem ipsum dolor sit amet, consectetur adifs...
-                            .action 
-                                span.greenlight
-                                | Marka şikayetinize cevap yazdı.
-                            .text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean blandit sagittis turpi...
-                            time 5 saat önce
+                            a(href="#")
+                                .brand Trendyol
+                                .title Lorem ipsum dolor sit amet, consectetur adifs...
+                                .action 
+                                    span.greenlight
+                                    | Marka şikayetinize cevap yazdı.
+                                .text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean blandit sagittis turpi...
+                                time 5 saat önce
                     li
                         div
                             img(src="images/ic_4.svg")
                         article
-                            .brand Apple
-                            .title Lorem ipsum dolor sit amet, consectetur adifs...
-                            .action 
-                                span.greenlight
-                                | Şikayetiniz ile ilgili 3 yeni yorum var.
-                            .text
-                            time 5 saat önce
+                            a(href="#")
+                                .brand Apple
+                                .title Lorem ipsum dolor sit amet, consectetur adifs...
+                                .action 
+                                    span.greenlight
+                                    | Şikayetiniz ile ilgili 3 yeni yorum var.
+                                .text
+                                time 5 saat önce
                     li.inactive
                         div
                             img(src="images/ic_4.svg")
                         article
-                            .brand Garanti Bankası
-                            .title Lorem ipsum dolor sit amet, consectetur adifs...
-                            .action 
-                                span.greenlight
-                                | Şikayetiniz 5 yeni destek aldı.
-                            .text
-                            time 5 saat önce
+                            a(href="#")
+                                .brand Garanti Bankası
+                                .title Lorem ipsum dolor sit amet, consectetur adifs...
+                                .action 
+                                    span.greenlight
+                                    | Şikayetiniz 5 yeni destek aldı.
+                                .text
+                                time 5 saat önce
 
             .showmore
                 button 
@@ -92,6 +98,7 @@ html(lang="en")
                 button Desteklediğim Şikayetler (65)
 
             footer
-                | Yazılan şikayetleri incelemek için sikayetvar.com’a git
-                img(src="images/right-chevron-white.svg")
+                a(href="#")
+                    | Yazılan şikayetleri incelemek için sikayetvar.com’a git
+                    img(src="images/right-chevron-white.svg")
                 .indicator
