--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,21 +4,18 @@ $green: #45da6f;
 $light-gray: #b0bece;
 
 html,body{
-	margin:0;
-	padding: 0;
-	
 	color: $blue;
 	font-family: 'Montserrat', sans-serif;
 	
 	font-kerning: normal;
 	text-rendering: optimizeLegibility;
-
 }
 
 .container{
 
 	background: $bg;
 	width: 375px;
+	margin: 0 auto;
 
 	.mobile-bar {
 		height:40px;
@@ -65,6 +62,11 @@ html,body{
 
 		li:last-child{
 			float: right;
+			position: relative;
+
+			.greenlight{
+				position: absolute;
+			}
 		}
 	}
 
@@ -195,6 +197,10 @@ html,body{
 
 				article{
 					width: 270px;
+					a{
+						color: $blue;
+						text-decoration: none;
+					}
 			
 					.brand{
 						font-size: 13px;
@@ -219,12 +225,6 @@ html,body{
 					}
 
 					.greenlight{
-						width:6px;
-						height:6px;
-						border-radius: 6px;
-						display:inline-block;
-						background-color: $green;
-						position: relative;
 						left:-10px;
 						margin-right: -5px;
 						vertical-align: middle;
@@ -292,20 +292,37 @@ html,body{
 		padding: 1rem;
 		height:3rem;
 		position: relative;
+		font-weight: 500;
 
 		img{
 			vertical-align: middle;
-			margin-left: 1rem;
+			margin-left: .4rem;
+		}
+
+		a{
+			color:white;
+			text-decoration: none;
 		}
 	}
 
 	.indicator{
 		background-color: black;
-		width:300px;
+		width: 135px;
 		height: 5px;
 		border-radius: 5px;
-		top: 10px;
+		top: 65px;
 		position: absolute;
+		left: 50%;
+		margin-left: -67px;
+	}
+
+	.greenlight{
+		width:6px;
+		height:6px;
+		border-radius: 6px;
+		display:inline-block;
+		background-color: $green;
+		position: relative;
 	}
 }
 
