--- a/views/logged.pug
+++ b/views/logged.pug
@@ -4,8 +4,8 @@ html(lang="en")
         meta(charset="UTF-8")
         title Şikayet Var
         link(href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap", rel="stylesheet")
-        script(src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js", defer)
-        script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js", defer)
+        script(src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js")
+        script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
         link(rel="stylesheet" href="css/styles.css")
     body
         .container
@@ -89,7 +89,7 @@ html(lang="en")
 
             .showmore
                 button 
-                    | Daha Çok Göster
+                    | Daha Çok Göster 
                     img(src="images/down-chevron.svg")
     
             .complaint-actions
@@ -102,3 +102,5 @@ html(lang="en")
                     | Yazılan şikayetleri incelemek için sikayetvar.com’a git
                     img(src="images/right-chevron-white.svg")
                 .indicator
+        
+        script(src="js/main.js")
