--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,12 @@ $bg : #f1f5f8;
 $blue : #002a5b;
 $green: #45da6f;
 $light-gray: #b0bece;
+$dark-gray: #B0BECE;
+$fb-color-bg: #2f77bf;
+$fb-color-border: #114c86;
+$g-color-border: #d7d7d7;
+$placeholder: #d7e2e8;
+
 
 html,body{
 	color: $blue;
@@ -39,6 +45,27 @@ html,body{
 		z-index: 1;
 
 		margin-bottom: -230px;
+	}
+
+	.bg-seal-login{
+		background: url(../images/logbg_w.png) center bottom;
+		background-size: cover;
+		width: 148px;
+		height: 74px;
+		position: relative;
+		z-index: 1;
+		left: 50%;
+		margin-left: -80px;
+		margin-top: -40px;
+	}
+
+	.logo{
+		width:196px;
+		margin: 0 auto 30px auto;
+
+		img{
+			width: 100%;
+		}
 	}
 
 	.content{
@@ -213,6 +240,7 @@ html,body{
 					}
 					.text{
 						font-size: 14px;
+						margin-bottom: 10px;
 					}
 					.action{
 						font-size: 14px;
@@ -283,6 +311,12 @@ html,body{
 			}
 		}
 	}
+
+	.complaint-actions {
+		button:last-child{
+			margin:0 15px 20px 15px;
+		}
+	}
 	
 	footer{
 		font-size: 12px;
@@ -323,6 +357,226 @@ html,body{
 		display:inline-block;
 		background-color: $green;
 		position: relative;
+	}
+
+	.login-with-social,.login-with-email,.login,.register,.login-form{
+		text-align: center;
+	}
+	
+	.login-with-social p{
+		font-size: 14px;
+		margin-bottom: 30px;
+	}
+
+	.fb-g{
+		button{
+			font-family: 'Montserrat', sans-serif;
+			font-size: 16px;
+			font-weight: 600;
+			border-radius: 10px;
+			width: 165px;
+			padding:0;
+			cursor:pointer;
+
+			img{
+				vertical-align: middle;
+			}
+
+			&:first-child{
+				background: $fb-color-bg;
+				border: 1px solid $fb-color-border;
+				color:white;
+				margin-right: 15px;
+				height: 44px;
+				line-height: 42px;
+
+				span{
+					border-left: 1px solid $fb-color-border;
+					display: inline-block;
+					padding: 0 0 0 12px;
+				}
+
+				img{
+					width:12px;
+					margin-right: 15px;
+					margin-left: -3px;
+				}
+			}
+
+			&:last-child{
+				background: #fff;
+				border: 1px solid $g-color-border;
+				color:#343434;
+				height: 44px;
+				line-height: 42px;
+
+				span{
+					border-left: 1px solid $g-color-border;
+					display: inline-block;
+					padding: 0 0 0 32px;
+				}
+
+				img{
+					width: 22px;
+					margin-right: 12px;
+					margin-left: -6px;
+				}
+			}
+		}
+	}
+
+	.login-with-email{
+		margin:30px 0;
+
+		p{
+			font-size:14px;
+			margin: 0;
+		}
+	}
+
+	.login-form{
+		padding: 0 15px;
+
+		.remember{
+			float: left;
+			vertical-align: middle;
+		}
+
+		.remember label {
+		  display: block;
+		  position: relative;
+		  padding-left: 35px;
+		  margin-bottom: 12px;
+		  cursor: pointer;
+		  font-size: 12px;
+		  -webkit-user-select: none;
+		  -moz-user-select: none;
+		  -ms-user-select: none;
+		  user-select: none;
+		}
+
+		.remember label input {
+			position: absolute;
+			opacity: 0;
+			cursor: pointer;
+			height: 0;
+			width: 0;
+		}
+
+		.checkmark {
+			position: absolute;
+			top: -5px;
+			left: 0;
+			height: 25px;
+			width: 25px;
+			background-color: $bg;
+			border: 2px solid $dark-gray;
+			border-radius: 4px;
+		}
+
+		.remember label input:checked ~ .checkmark {
+
+		}
+
+		.checkmark:after {
+		  content: "";
+		  position: absolute;
+		  display: none;
+		}
+
+		.remember label input:checked ~ .checkmark:after {
+		  display: block;
+		}
+
+		.remember label .checkmark:after {
+		 	left: 7px;
+			top: 3px;
+			width: 7px;
+			height: 12px;
+			border: solid $blue;
+			border-width: 0 4px 4px 0;
+			-webkit-transform: rotate(45deg);
+			-ms-transform: rotate(45deg);
+			transform: rotate(45deg);
+			border-radius: 3px;
+		}
+
+		.form-control{
+			clear: both;
+			box-sizing:border-box;
+
+			input[type="text"],input[type="password"]{
+				margin-bottom: 15px;
+			}
+
+			input[type="text"],input[type="password"]{
+				box-sizing:border-box;
+				color: $blue;
+				border:1px solid $placeholder;
+				border-radius: 5px;
+				width: 345px;
+				padding: 15px;
+				font-size: 15px;
+			}
+		}
+
+		.forgot-pass{
+			float: right;
+			font-size: 12px;
+			color: $blue!important;
+
+			a{
+				color: $blue;
+				text-decoration: underline;
+
+				&:hover{
+					text-decoration: none;
+				}
+			}
+		}
+
+		.reveal-pass{
+			position: relative;
+
+			img{
+				position: absolute;
+				top: -48px;
+				right: 20px;
+				width: 26px;
+			}
+		}
+	}
+
+	.login{
+		margin-top: 110px;
+
+		button{
+			display: block;
+			width: 345px;
+			margin:0 0 10px 0;
+			padding: 15px;
+			font-size: 16px;
+			font-weight: 600;
+			color:white;
+			background-color: $green;
+			border:none;
+			border-radius: 5px;
+			font-family: 'Montserrat', sans-serif;
+			cursor: pointer;
+		}
+	}
+
+	hr{
+		border-top:1px dashed red;
+	}
+
+	.register{
+		margin:15px 0 30px 0;
+		font-size: 14px;
+		a{
+			color:$blue;
+			text-decoration: none;
+		}
 	}
 }
 
